fix smell issues for hard problems